--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-graphql": "^0.7.1",
+    "graphql": "^14.5.8",
     "mongoose": "^5.4.17",
     "nodemon": "^1.18.10"
   }
