--- a/package.json
+++ b/package.json
@@ -1,19 +1,73 @@
 {
   "name": "graphql-tutorial",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "dev": "nodemon server/server/app.js"
+    "dev:server": "nodemon server/server/app.js",
+    "dev": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "lint:ts": "eslint --ext src/**/*.{ts,tsx}",
+    "eject": "react-scripts eject"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^4.7.2",
+    "@material-ui/icons": "^4.5.1",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "@types/recompose": "^0.30.7",
+    "@typescript-eslint/eslint-plugin": "^2.11.0",
+    "apollo-boost": "^0.4.4",
     "cors": "^2.8.5",
-    "express": "^4.16.4",
-    "express-graphql": "^0.7.1",
+    "express": "^4.17.1",
+    "express-graphql": "^0.9.0",
+    "global": "^4.4.0",
     "graphql": "^14.5.8",
-    "mongoose": "^5.4.17",
-    "nodemon": "^1.18.10"
+    "mongoose": "^5.8.0",
+    "nodemon": "^2.0.2",
+    "react": "^16.12.0",
+    "react-apollo": "^3.1.3",
+    "react-dom": "^16.12.0",
+    "react-scripts": "3.3.0",
+    "react-swipeable-views": "^0.13.3",
+    "recompose": "^0.30.0"
+  },
+  "lint-staged": {
+    "src/**/*.{ts,tsx}": "eslint"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@types/node": "^12.12.17",
+    "@types/react": "^16.9.16",
+    "@types/react-dom": "^16.9.4",
+    "@typescript-eslint/parser": "^2.11.0",
+    "eslint": "^6.7.2",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-react-hooks": "^2.3.0",
+    "husky": "^3.1.0",
+    "lint-staged": "^9.5.0",
+    "prettier": "^1.19.1",
+    "typescript": "^3.7.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged && tsc"
+    }
   }
 }
