--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
     "@material-ui/core": "^4.7.2",
     "@material-ui/icons": "^4.5.1",
     "@testing-library/jest-dom": "^4.2.4",
